buscompaniesDao, buscompanies
